<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <item
        android:id="@+id/search_note"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <item
        android:id="@+id/about_button"
        app:showAsAction="never"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/about_button" />

    <item
        android:id="@+id/back_button"
        app:showAsAction="always"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/back_button" />

    <item
        android:id="@+id/add_note"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="always"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/add_note" />
</menu>