<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".AddNoteFragment">

<!-- TODO: Update blank fragment layout -->

<TextView
    android:id="@+id/change_note"
    android:layout_height="35dp"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:textSize="30sp"
    android:gravity="center_horizontal"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/change_note_header"/>

<EditText
    android:id="@+id/note_name"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="40dp"
    tools:ignore="ExtraText"
    android:hint="@string/name_hint"
    app:layout_constraintTop_toBottomOf="@id/change_note"
    android:importantForAutofill="no">
</EditText>

<EditText
    android:id="@+id/note_text"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="40dp"
    android:hint="@string/text_hint"
    app:layout_constraintTop_toBottomOf="@id/note_name"
    tools:ignore="ExtraText"
    tools:layout_editor_absoluteX="40dp"
    android:importantForAutofill="no" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/change_note_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="40dp"
    android:text="@string/save_note"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/note_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_min"
        android:text="@string/delete_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_note_button" />

</androidx.constraintlayout.widget.ConstraintLayout>